# python-venv-manager

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
